--- a/src/crf-demo.ipynb
+++ b/src/crf-demo.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/k/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/usr/local/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "/Users/k/anaconda3/lib/python3.6/site-packages/sklearn/grid_search.py:42: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "/usr/local/lib/python3.6/site-packages/sklearn/grid_search.py:42: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
       "  DeprecationWarning)\n"
      ]
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,15 +44,15 @@
      "output_type": "stream",
      "text": [
       "251768\n",
-      "CPU times: user 5.51 s, sys: 561 ms, total: 6.07 s\n",
-      "Wall time: 6.24 s\n"
+      "CPU times: user 6.24 s, sys: 516 ms, total: 6.75 s\n",
+      "Wall time: 6.84 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "def get_sents(path):\n",
-    "    #'./data/train.txt';'./data/dev.txt'\n",
+    "    #'../data/train.txt';'../data/dev.txt'\n",
     "    sentences = []\n",
     "    sentence = []\n",
     "    cnt = 0\n",
@@ -72,13 +72,13 @@
     "            sentences.append(sentence.copy())\n",
     "            sentence.clear()\n",
     "    return sentences\n",
-    "train_sentences = get_sents('./data/train.txt')\n",
+    "train_sentences = get_sents('../data/train.txt')\n",
     "print(len(train_sentences))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        " ('，', 'O')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " 'O']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,56 +150,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('科', 'O'),\n",
-       " ('教', 'O'),\n",
-       " ('兴', 'O'),\n",
-       " ('国', 'O'),\n",
-       " ('蔚', 'O'),\n",
-       " ('然', 'O'),\n",
-       " ('成', 'O'),\n",
-       " ('风', 'O'),\n",
-       " ('时', 'O'),\n",
-       " ('，', 'O')]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentences[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 466 ms, sys: 279 ms, total: 744 ms\n",
-      "Wall time: 745 ms\n"
+      "CPU times: user 358 ms, sys: 30 ms, total: 388 ms\n",
+      "Wall time: 556 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "train_sents = train_sentences\n",
-    "test_sents = get_sents('./data/dev.txt')"
+    "test_sents = get_sents('../data/dev.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,24 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'+1:word.istitle()': False,\n",
-       " '+1:word.isupper()': False,\n",
-       " '+1:word.lower()': '希',\n",
-       " 'BOS': True,\n",
-       " 'bias': 1.0,\n",
-       " 'word.isdigit()': False,\n",
-       " 'word.istitle()': False,\n",
+       "{'bias': 1.0,\n",
+       " 'word.lower()': '当',\n",
        " 'word.isupper()': False,\n",
-       " 'word.lower()': '当'}"
+       " 'word.istitle()': False,\n",
+       " 'word.isdigit()': False,\n",
+       " 'BOS': True,\n",
+       " '+1:word.lower()': '希',\n",
+       " '+1:word.istitle()': False,\n",
+       " '+1:word.isupper()': False}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,15 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.1 s, sys: 2.69 s, total: 14.8 s\n",
-      "Wall time: 15.4 s\n"
+      "CPU times: user 14.7 s, sys: 2.12 s, total: 16.8 s\n",
+      "Wall time: 18.5 s\n"
      ]
     }
    ],
@@ -311,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 52s, sys: 9.21 s, total: 5min 1s\n",
-      "Wall time: 5min 8s\n"
+      "CPU times: user 4min 50s, sys: 8.59 s, total: 4min 59s\n",
+      "Wall time: 5min 9s\n"
      ]
     }
    ],
@@ -337,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +317,7 @@
        "['B-LOC', 'I-LOC', 'B-ORG', 'I-ORG', 'B-PER', 'I-PER']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,16 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7584794834915617"
+       "0.75847948349156169"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +540,7 @@
     "print(\"\\nTop negative:\")\n",
     "print_state_features(Counter(crf.state_features_).most_common()[-30:])\n",
     "#结果挺合理，寇确实是姓比较多\n",
-    "#禺确实是民比较多"
+    "#禺确实是名比较多"
    ]
   },
   {
@@ -584,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
