--- a/src/record.ipynb
+++ b/src/record.ipynb
@@ -160,15 +160,17 @@
     "且emit概率都也是很低的，解码过程被O->O转移概率主导了。      \n",
     "想到的一个方法是强行让O->O转移概率降低，并实现其他转移概率的再分配，这样好一点。    \n",
     "\n",
-    "此外对于emit概率还需要做平滑，使用了简单的+1平滑，但不是常规的+1平滑。"
+    "此外对于emit概率还需要做平滑，使用了简单的+1平滑，但不是常规的+1平滑，因为不知道word总数是多少，可能出现未知的word。\n",
+    "另外，仅使用hmm会出现一些无效的序列。而crf可以很大程度上避免无效序列的问题，因此crf在NER任务上优于HMM.\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "由于训练样本给的是序列标注，因此简便起见并没有切词，可能切词之后再用hmm效果会好一些。"
+   ]
   },
   {
    "cell_type": "code",
