--- a/src/anago-demo-epoch15.ipynb
+++ b/src/anago-demo-epoch15.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,18 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['当', '希', '望', '工', '程', '救', '助', '的', '百', '万', '儿', '童', '成', '长', '起', '来', '，']\n",
-      "['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_train, y_train = load_data_and_labels('../data/train.txt')\n",
     "x_test, y_test = load_data_and_labels('../data/dev.txt')"
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,9 +104,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/k/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "9331/9331 [==============================] - 2195s 235ms/step - loss: 7.3032\n",
+      "Epoch 2/15\n",
+      "9331/9331 [==============================] - 2347s 252ms/step - loss: 7.2532\n",
+      "Epoch 3/15\n",
+      "9331/9331 [==============================] - 2328s 249ms/step - loss: 7.2473\n",
+      "Epoch 4/15\n",
+      "9331/9331 [==============================] - 2351s 252ms/step - loss: 7.2439\n",
+      "Epoch 5/15\n",
+      "9331/9331 [==============================] - 2300s 246ms/step - loss: 7.2419\n",
+      "Epoch 6/15\n",
+      "9331/9331 [==============================] - 2226s 239ms/step - loss: 7.2405\n",
+      "Epoch 7/15\n",
+      "9331/9331 [==============================] - 2226s 239ms/step - loss: 7.2396\n",
+      "Epoch 8/15\n",
+      "9331/9331 [==============================] - 2225s 238ms/step - loss: 7.2387\n",
+      "Epoch 9/15\n",
+      "9331/9331 [==============================] - 2224s 238ms/step - loss: 7.2381\n",
+      "Epoch 10/15\n",
+      "9331/9331 [==============================] - 2220s 238ms/step - loss: 7.2378\n",
+      "Epoch 11/15\n",
+      "9331/9331 [==============================] - 2212s 237ms/step - loss: 7.2373\n",
+      "Epoch 12/15\n",
+      "9331/9331 [==============================] - 2224s 238ms/step - loss: 7.2371\n",
+      "Epoch 13/15\n",
+      "9331/9331 [==============================] - 2225s 238ms/step - loss: 7.2368\n",
+      "Epoch 14/15\n",
+      "9331/9331 [==============================] - 2220s 238ms/step - loss: 7.2366\n",
+      "Epoch 15/15\n",
+      "9331/9331 [==============================] - 2232s 239ms/step - loss: 7.2364\n"
+     ]
+    }
+   ],
    "source": [
     "import anago\n",
     "model = anago.Sequence()\n",
@@ -126,8 +163,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Epoch 1/15    \n",
-    "2404/9331 [======>.......................] - ETA: 13:42 - loss: 7.5082"
+    "训练过程如下： \n",
+    "\n",
+    "Epoch 1/15\n",
+    "9331/9331 [==============================] - 2319s 249ms/step - loss: 7.2982\n",
+    "Epoch 2/15\n",
+    "9331/9331 [==============================] - 2234s 239ms/step - loss: 7.2529\n",
+    "Epoch 3/15\n",
+    "9331/9331 [==============================] - 2236s 240ms/step - loss: 7.2469\n",
+    "Epoch 4/15\n",
+    "9331/9331 [==============================] - 2323s 249ms/step - loss: 7.2439\n",
+    "Epoch 5/15\n",
+    "8865/9331 [===========================>..] - ETA: 1:52 - loss: 7.2253\n",
+    "\n",
+    "用jupyter跑感觉很慢，而且训练过程中打印会出现问题。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意，model.score()只是返回一个F1-score，要print出来。由于没有print，曾浪费了10多个小时跑完15个epoch。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7459409594095942\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.score(x_test, y_test)) #score一次需要6-7分钟"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一个epoch   \n",
+    "0.6514121589277165"
    ]
   },
   {
@@ -136,15 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.score(x_test, y_test)"
+    "# 纯crf模型，窗口为3，就可以达到80多的F1-score,且训练时间比NN方法短的多，预测用时也短。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
