--- a/src/lstm-demo.ipynb
+++ b/src/lstm-demo.ipynb
@@ -218,6 +218,123 @@
     "Epoch 3/15\n",
     "13024/25000 [==============>...............] - ETA: 1:00 - loss: 0.2101 - acc: 0.9170"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = [[1,2],[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lens = list(map(len,x_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(lens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 1. 0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 1. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 1. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 1. 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "y=keras.utils.to_categorical([[1,3],[2,3]],num_classes = 7)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 0. 0. 0. 0. 0. 0.]\n",
+      "  [0. 1. 0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 1. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 1. 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y=keras.utils.to_categorical([[0,1],[2,3]],num_classes = 7)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
