15epochs achieve f1-score 0.865

--- a/src/anago-demo-epoch15.ipynb
+++ b/src/anago-demo-epoch15.ipynb
@@ -8,14 +8,14 @@
     {
      "ename": "ValueError",
      "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-2-f8014457a636>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0manago\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_data_and_labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_data_and_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/train.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_data_and_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/dev.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Library/Python/3.6/lib/python/site-packages/anago/utils.py\u001b[0m in \u001b[0;36mload_data_and_labels\u001b[0;34m(filename, encoding)\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m                 \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m                 \u001b[0mwords\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m                 \u001b[0mtags\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -163,20 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "训练过程如下： \n",
-    "\n",
-    "Epoch 1/15\n",
-    "9331/9331 [==============================] - 2319s 249ms/step - loss: 7.2982\n",
-    "Epoch 2/15\n",
-    "9331/9331 [==============================] - 2234s 239ms/step - loss: 7.2529\n",
-    "Epoch 3/15\n",
-    "9331/9331 [==============================] - 2236s 240ms/step - loss: 7.2469\n",
-    "Epoch 4/15\n",
-    "9331/9331 [==============================] - 2323s 249ms/step - loss: 7.2439\n",
-    "Epoch 5/15\n",
-    "8865/9331 [===========================>..] - ETA: 1:52 - loss: 7.2253\n",
-    "\n",
-    "用jupyter跑感觉很慢，而且训练过程中打印会出现问题。"
+    "用jupyter跑感觉很慢，而且训练过程中打印,可能页面会卡住。"
    ]
   },
   {
@@ -200,7 +187,7 @@
     }
    ],
    "source": [
-    "print(model.score(x_test, y_test)) #score一次需要6-7分钟"
+    "print(model.score(x_test, y_test)) #score一次需要6-7分钟；这是15个epoch的结果"
    ]
   },
   {
@@ -217,6 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#看了anago模型的实现，里面可能存在bug。\n",
     "# 纯crf模型，窗口为3，就可以达到80多的F1-score,且训练时间比NN方法短的多，预测用时也短。"
    ]
   }
