--- a/src/crf.ipynb
+++ b/src/crf.ipynb
@@ -1261,9 +1261,15 @@
     "print_state_features(Counter(crf.state_features_).most_common(30))\n",
     "\n",
     "print(\"\\nTop negative:\")\n",
-    "print_state_features(Counter(crf.state_features_).most_common()[-30:])\n",
-    "#结果挺合理，赵、寇、薛 确实是姓比较多\n",
-    "# 禺 确实是名比较多"
+    "print_state_features(Counter(crf.state_features_).most_common()[-30:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "结果挺合理，赵、寇、薛 确实是姓比较多     \n",
+    "禺 确实是名比较多"
    ]
   },
   {
