--- a/src/crf.ipynb
+++ b/src/crf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,8 @@
      "output_type": "stream",
      "text": [
       "251768\n",
-      "CPU times: user 6.47 s, sys: 820 ms, total: 7.3 s\n",
-      "Wall time: 8.03 s\n"
+      "CPU times: user 6.89 s, sys: 541 ms, total: 7.43 s\n",
+      "Wall time: 8.07 s\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        " ('，', 'O')]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        " 'O']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 950 ms, sys: 2.84 s, total: 3.79 s\n",
-      "Wall time: 6.72 s\n"
+      "CPU times: user 243 ms, sys: 24.4 ms, total: 268 ms\n",
+      "Wall time: 271 ms\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        " '+1:word.isupper()': False}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,15 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.9 s, sys: 14.4 s, total: 32.3 s\n",
-      "Wall time: 43.6 s\n"
+      "CPU times: user 14.5 s, sys: 2.54 s, total: 17 s\n",
+      "Wall time: 18.2 s\n"
      ]
     }
    ],
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 58s, sys: 14.3 s, total: 5min 12s\n",
-      "Wall time: 5min 30s\n"
+      "CPU times: user 5min 1s, sys: 11 s, total: 5min 12s\n",
+      "Wall time: 5min 25s\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "['B-LOC', 'I-LOC', 'B-ORG', 'I-ORG', 'B-PER', 'I-PER']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "0.7542816896014515"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "10754"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "  'O']]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "10754"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ORG     0.7649    0.4643    0.5778      1331\n",
+      "        PER     0.8105    0.5636    0.6649      1973\n",
+      "        LOC     0.7969    0.6628    0.7237      2877\n",
+      "\n",
+      "avg / total     0.7943    0.5884    0.6735      6181\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from seqeval.metrics import classification_report\n",
+    "from functools import reduce\n",
+    "y_test = reduce(lambda x,y : x + y, y_test)\n",
+    "y_pred = reduce(lambda x,y : x + y, y_pred)\n",
+    "print(classification_report(y_test,y_pred,digits=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -735,8 +763,8 @@
      "output_type": "stream",
      "text": [
       "251768\n",
-      "CPU times: user 4min 19s, sys: 10.9 s, total: 4min 30s\n",
-      "Wall time: 4min 40s\n"
+      "CPU times: user 4min 18s, sys: 11.2 s, total: 4min 29s\n",
+      "Wall time: 4min 35s\n"
      ]
     }
    ],
@@ -748,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -765,15 +793,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.6 s, sys: 618 ms, total: 11.2 s\n",
-      "Wall time: 11.6 s\n"
+      "CPU times: user 10.6 s, sys: 594 ms, total: 11.2 s\n",
+      "Wall time: 11.2 s\n"
      ]
     }
    ],
@@ -785,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +908,7 @@
        " '+1:postag': 'nz'}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,15 +919,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.9 s, sys: 12.1 s, total: 29 s\n",
-      "Wall time: 36.3 s\n"
+      "CPU times: user 16.3 s, sys: 11.3 s, total: 27.6 s\n",
+      "Wall time: 38.2 s\n"
      ]
     }
    ],
@@ -914,15 +942,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5min 19s, sys: 16.2 s, total: 5min 35s\n",
-      "Wall time: 5min 56s\n"
+      "CPU times: user 5min 7s, sys: 14.1 s, total: 5min 22s\n",
+      "Wall time: 5min 30s\n"
      ]
     }
    ],
@@ -940,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +977,7 @@
        "['B-LOC', 'I-LOC', 'B-ORG', 'I-ORG', 'B-PER', 'I-PER']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +999,7 @@
        "0.7943372374877178"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1092,7 @@
        "  'O']]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1104,13 +1132,42 @@
     ")\n",
     "print(metrics.flat_classification_report(\n",
     "    y_test, y_pred, labels=sorted_labels, digits=3\n",
-    "))\n",
-    "#加了词性，从0.754->0.794"
+    "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ORG     0.8406    0.5349    0.6538      1331\n",
+      "        PER     0.8376    0.5753    0.6821      1973\n",
+      "        LOC     0.8457    0.7070    0.7702      2877\n",
+      "\n",
+      "avg / total     0.8420    0.6279    0.7170      6181\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from seqeval.metrics import classification_report\n",
+    "from functools import reduce\n",
+    "y_test = reduce(lambda x,y : x + y, y_test)\n",
+    "y_pred = reduce(lambda x,y : x + y, y_pred)\n",
+    "print(classification_report(y_test,y_pred,digits=4))\n",
+    "# 加了词性，f1-score 从0.754->0.794\n",
+    "# 0.6735 ->0.7170"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1271,13 +1328,6 @@
     "结果挺合理，赵、寇、薛 确实是姓比较多     \n",
     "禺 确实是名比较多"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
