--- a/src/anago-demo-epoch15.ipynb
+++ b/src/anago-demo-epoch15.ipynb
@@ -200,13 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#看了anago模型的实现，里面可能存在bug。\n",
-    "# 纯crf模型，窗口为3，就可以达到80多的F1-score,且训练时间比NN方法短的多，预测用时也短。"
+    "# 纯crf模型，窗口为3，就可以达到接近80的F1-score,且训练时间比NN方法短的多，预测用时也短。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
