--- a/src/pretrain.ipynb
+++ b/src/pretrain.ipynb
@@ -329,7 +329,25 @@
       "Epoch 2/15\n",
       "298770/298770 [==============================] - 8028s 27ms/step - loss: 21.4027 - acc: 0.9575 - val_loss: 21.8668 - val_acc: 0.9679\n",
       "Epoch 3/15\n",
-      "257580/298770 [========================>.....] - ETA: 18:05 - loss: 21.4116 - acc: 0.9599"
+      "298770/298770 [==============================] - 7914s 26ms/step - loss: 21.3990 - acc: 0.9601 - val_loss: 21.8665 - val_acc: 0.9628\n",
+      "Epoch 4/15\n",
+      "298770/298770 [==============================] - 7903s 26ms/step - loss: 21.3970 - acc: 0.9618 - val_loss: 21.8631 - val_acc: 0.9674\n",
+      "Epoch 5/15\n",
+      "298770/298770 [==============================] - 7859s 26ms/step - loss: 21.3957 - acc: 0.9625 - val_loss: 21.8634 - val_acc: 0.9661\n",
+      "Epoch 6/15\n",
+      "298770/298770 [==============================] - 7866s 26ms/step - loss: 21.3945 - acc: 0.9633 - val_loss: 21.8625 - val_acc: 0.9696\n",
+      "Epoch 7/15\n",
+      "298770/298770 [==============================] - 7870s 26ms/step - loss: 21.3939 - acc: 0.9640 - val_loss: 21.8628 - val_acc: 0.9698\n",
+      "Epoch 8/15\n",
+      "298770/298770 [==============================] - 7855s 26ms/step - loss: 21.3931 - acc: 0.9646 - val_loss: 21.8611 - val_acc: 0.9689\n",
+      "Epoch 9/15\n",
+      "298770/298770 [==============================] - 7999s 27ms/step - loss: 21.3926 - acc: 0.9648 - val_loss: 21.8610 - val_acc: 0.9706\n",
+      "Epoch 10/15\n",
+      "298770/298770 [==============================] - 8121s 27ms/step - loss: 21.3922 - acc: 0.9650 - val_loss: 21.8613 - val_acc: 0.9690\n",
+      "Epoch 11/15\n",
+      "298770/298770 [==============================] - 8096s 27ms/step - loss: 21.3918 - acc: 0.9653 - val_loss: 21.8609 - val_acc: 0.9701\n",
+      "Epoch 12/15\n",
+      "166884/298770 [===============>..............] - ETA: 59:04 - loss: 21.3295 - acc: 0.9655"
      ]
     }
    ],
@@ -416,6 +434,19 @@
     "os.mkdir('../data/pretrain_embedding')\n",
     "save_path = '../data/pretrain_embedding/pred.txt'\n",
     "save_pred(pred,save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from seqeval.metrics import classification_report\n",
+    "from functools import reduce\n",
+    "y_test = reduce(lambda x,y : x + y, y_test)\n",
+    "pred = reduce(lambda x,y : x + y, pred)\n",
+    "print(classification_report(y_test,pred,digits=4))"
    ]
   },
   {
