--- a/src/epoch100.ipynb
+++ b/src/epoch100.ipynb
@@ -273,6 +273,26 @@
     "Epoch 44/100\n",
     "298770/298770 [==============================] - 3959s 13ms/step - loss: 21.3703 - acc: 0.9827 - val_loss: 21.8520 - val_acc: 0.9804"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from seqeval.metrics import classification_report\n",
+    "from functools import reduce\n",
+    "y_test = reduce(lambda x,y : x + y, y_test)\n",
+    "pred = reduce(lambda x,y : x + y, pred)\n",
+    "print(classification_report(y_test,pred,digits=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
