--- a/src/anago-pre-trained-demo.ipynb
+++ b/src/anago-pre-trained-demo.ipynb
@@ -219,6 +219,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import load_data_and_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "def get_sents(path):\n",
+    "    sentences = []\n",
+    "    sentence = []\n",
+    "    split_pattern = re.compile(r'[；;。，、？！\\.\\?,! ]') #.要转义，不然表示的是通配符\n",
+    "    with open(path,'r',encoding = 'utf8') as f:\n",
+    "        for line in f.readlines():#每行为一个字符和其tag，中间用tab隔开\n",
+    "            line = line.strip().split('\\t')\n",
+    "            if(not line or len(line) < 2): continue\n",
+    "            word_unit = (line[0],line[1]) #word and tag\n",
+    "            if split_pattern.match(word_unit[0]):\n",
+    "                sentence.append(word_unit)\n",
+    "                sentences.append(sentence.copy())\n",
+    "                sentence.clear()\n",
+    "            else:\n",
+    "                sentence.append(word_unit)\n",
+    "        if(len(sentence)):\n",
+    "            sentences.append(sentence.copy())\n",
+    "            sentence.clear()\n",
+    "    return sentences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x =  get_sents('../data/train.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stat():\n",
+    "    x = get_sents('../data/train.txt')\n",
+    "    print(len(x))\n",
+    "    d = {}\n",
+    "    d['<=100'] = 0\n",
+    "    d['>100'] = 0\n",
+    "    for seq in x:\n",
+    "        if len(seq) <= 100:\n",
+    "            d['<=100'] += 1\n",
+    "        else:\n",
+    "            d['>100'] += 1\n",
+    "    print(d)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "298770\n"
+     ]
+    }
+   ],
+   "source": [
+    "stat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "298564"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {}\n",
+    "d['<=100'] = 0\n",
+    "d['>100'] = 0\n",
+    "for seq in x:\n",
+    "    if len(seq) <= 100:\n",
+    "        d['<=100'] += 1\n",
+    "    else:\n",
+    "        d['>100'] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'<=100': 298499, '>100': 65}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "298564"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "298499 + 65"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x =  get_sents('../data/dev.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {}\n",
+    "d['<=100'] = 0\n",
+    "d['>100'] = 0\n",
+    "for seq in x:\n",
+    "    if len(seq) <= 100:\n",
+    "        d['<=100'] += 1\n",
+    "    else:\n",
+    "        d['>100'] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'<=100': 12956, '>100': 13}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12969"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12956 + 13"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
